--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,15 +1,25 @@
 .bg-image {
 	background-image: url("../img/England_rugby.jpg");
 	background-size: cover;
+	
 }
 
+.bg-image2 {
+	
+	width: 100%;
+}
+
+.transparent-b{
+	background-color: rgba(255,255,255,0.5);
+}
 .login-image {
 	background-image: url("../img/england_trophy.jpg");
 	background-size: cover;
 }
 
 .white-bg {
-	background-color: white;
+	    background-color: rgba(255, 255, 255, 0.7);
+
 }
 
 .heading {
@@ -25,4 +35,56 @@ button {
 	top:300px;
 	font-size: 30px;
 
+}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+    padding: 14px 20px;
+    background-color: #f44336;
+}
+
+/* Float cancel and signup buttons and add an equal width */
+.cancelbtn,.signupbtn {
+    float: left;
+    width: 50%;
+}
+
+/* Add padding to container elements */
+.container {
+    padding: 16px;
+}
+
+/* Clear floats */
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+/* Change styles for cancel button and signup button on extra small screens */
+@media screen and (max-width: 300px) {
+    .cancelbtn, .signupbtn {
+        width: 100%;
+    }
 }
